// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelManagementService should createAsset 1`] = `
Object {
  "_mockParameters": Array [
    "1.0",
    "00000000-0000-0000-0000-000000000000",
    "testResource",
    "testWorkSpace",
    Object {
      "abortSignal": Object {},
      "asset": Object {
        "artifacts": Array [
          Object {
            "prefix": "/dummy",
          },
        ],
        "description": "test description",
        "name": "test",
      },
    },
  ],
  "id": "id",
  "mimeType": "mimeType",
  "name": "name",
  "url": "http://www.dummyurl.com/dummy",
}
`;

exports[`ModelManagementService should getDeployStatus 1`] = `
Object {
  "_mockParameters": Array [
    "testOperationId",
    "1.0",
    "00000000-0000-0000-0000-000000000000",
    "testResource",
    "testWorkSpace",
    Object {
      "abortSignal": Object {},
    },
  ],
  "createdTime": 2019-02-11T05:45:00.000Z,
  "endTime": 2019-02-11T05:55:00.000Z,
  "id": "2d700ed6-148b-4378-a1d7-d8e79c628244",
  "operationLog": "abc",
  "operationType": "AciService",
  "resourceLocation": "test",
  "state": "Succeeded",
}
`;

exports[`ModelManagementService should registerModel 1`] = `
Object {
  "_mockParameters": Array [
    Object {
      "description": "test description",
      "experimentName": "runId",
      "mimeType": "test mime type",
      "name": "test",
      "runId": "experimentName",
      "url": "aml://asset/test url",
    },
    "1.0",
    "00000000-0000-0000-0000-000000000000",
    "testResource",
    "testWorkSpace",
    Object {
      "abortSignal": Object {},
    },
  ],
  "id": "id",
  "mimeType": "mimeType",
  "name": "name",
  "url": "http://www.dummyurl.com/dummy",
}
`;
